# vault-examples

./: .gitignore  CODEOWNERS  LICENSE  README.md  config.hcl  dev-policy.hcl  docker-compose.yml  setup.sh
.github/: pull_request_template.md
.github/workflows/: run-dotnet-tests.yml  run-tests.yml
dotnet/: AwsAuth.cs  AzureAuth.cs  GcpAuth.cs  Program.cs  dotnet.csproj
dotnet/ExampleTests/: AuthTests.cs  ExampleTests.csproj
dotnet/Examples/: ApproleResponseWrapping.cs  AwsAuth.cs  AzureAuth.cs  Examples.csproj  GcpAuth.cs  KubernetesAuth.cs  Program.cs  TokenAuth.cs  examples.csproj
examples/_quick-start/: README.md
examples/_quick-start/dotnet/: Example.cs
examples/_quick-start/go/: example.go
examples/_quick-start/java/: Example.java
examples/_quick-start/python/: example.py
examples/_quick-start/ruby/: example.rb
examples/client-applications/: README.md  setup-vault-for-my-vault-app-namespace.sh  setup-vault-for-my-vault-app.sh
examples/client-applications/cpp/: CMakeLists.txt  README.md  config.ini
examples/client-applications/cpp/include/: Config.hpp  HttpClient.hpp  VaultClient.hpp
examples/client-applications/cpp/src/: Config.cpp  HttpClient.cpp  VaultClient.cpp  main.cpp
examples/token-renewal/: README.md  example.go
go/: 1_hello-world.go  2_aws-auth.go  2_get-secret-with-approle.go  2_renew-token.go  3_auth-approle-with-response-wrapping.go  3_userpass-auth.go  4_auth-aws.go  4_gcp-auth.go  5_auth-gcp.go  6_auth-kubernetes.go  7_auth-azure.go  auth-aws.go  examples_test.go  go.mod  go.sum  renew-token.go
(+129 files in other folders)
